--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Getting Started</a>
+              <a class="nav-link" href="https://sabitaneupane.github.io/" target="_blank">About Me</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Getting Started
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">What is a web designing?</a>
+                <a class="dropdown-item" href="#">How the Web Works?</a>
+                <a class="dropdown-item" href="#">Core Web Technology</a>
+                <a class="dropdown-item" href="#">Elements of Web Design</a>
+                <a class="dropdown-item" href="#">Text Editor</a>
+              </div>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -42,6 +55,46 @@
                 <a class="dropdown-item" href="#">Dynamic and Static Site</a>
                 <a class="dropdown-item" href="#">Semantic HTML</a>
               </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                CSS
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Introduction</a>
+                <a class="dropdown-item" href="#">Site layout </a>
+                <a class="dropdown-item" href="#">Responsive design</a>
+                <a class="dropdown-item" href="#">Cross-browser compatibility</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                JavaScript
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Introduction</a>
+                <a class="dropdown-item" href="#">Working with Array and Object</a>
+                <a class="dropdown-item" href="#">Events and Event Handling</a>
+                <a class="dropdown-item" href="#">Forms and Validations</a>
+                <a class="dropdown-item" href="#">The Browser Environment</a>
+                <a class="dropdown-item" href="#">DOM Manipulation</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Assignment
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="basic/assignment/index.html">HTML</a>
+                <a class="dropdown-item" href="#">CSS</a>
+                <a class="dropdown-item" href="#">JavaScript</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
